--- a/home.html
+++ b/home.html
@@ -1,9 +1,13 @@
 <html>
+	<link rel = "stylesheet"
+		type = "text/css"
+		href = "styles.css"
+		/>
 	<head>
 		<title>First page</title>
 	</head>
 	<body>
-		<a href = "home.html">Home</a> 
+		<a href = "home.html" class = "greenlink">Home</a> 
 		&nbsp;
 		<a href = "about.html">About me</a>
 		&nbsp;
@@ -11,5 +15,9 @@
 		<hr></hr>
 
 		<h1>Home Page</h1>
+		<p class = "gap_below">
+		<span class = "indent">Hello </span>hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello 
+		</p>
+		<p>second para</p>
 	</body>
 </html>
