--- a/contact.html
+++ b/contact.html
@@ -11,18 +11,21 @@
 		<hr></hr>
 		<h1>Contact Me</h1>
 
+	<div class = "responsive">Column 1
 		<h3>Ordered list</h3>
 		<ol>
 			<li>house no</li>
 			<li>street no</li>
 			<li>town</li>
 		</ol>
-
+	</div>
+	<div class = "responsive">Column 2
 		<h3>Unordered list</h3>
 		<ul>
 			<li>house no</li>
 			<li>street no</li>
 			<li>town</li>
 		</ul>
+	</div>
 	</body>
 </html>
