--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <html>
 	<link rel = "stylesheet"
 		type = "text/css"
-		href = "styles.css"
+		href = "bootstrap.css"
 		/>
 	<head>
 		<title>First page</title>
