--- a/home.html
+++ b/home.html
@@ -1,8 +1,14 @@
 <html>
 	<link rel = "stylesheet"
 		type = "text/css"
-		href = "styles.css"
+		href = "bootstrap.css"
 		/>
+
+	<link rel = "stylesheet"
+		type = "text/css"
+		href = "styles2.css"
+		/>
+
 	<head>
 		<title>First page</title>
 	</head>
@@ -13,11 +19,16 @@
 		&nbsp;
 		<a href = "contact.html">Contact</a>
 		<hr></hr>
-
+	<div class = "container">
 		<h1>Home Page</h1>
-		<p class = "gap_below">
-		<span class = "indent">Hello </span>hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello 
-		</p>
-		<p>second para</p>
+		<div class = "row">
+			<div class = "col-md-6 thin_border">
+				Some content here for panel 1
+			</div>
+			<div class = "col-md-6 thin_border">
+				Some content here for panel 2
+			</div>
+		</div>
+	</div>
 	</body>
 </html>
