--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,14 @@
 <html>
 	<link rel = "stylesheet"
 		type = "text/css"
-		href = "styles.css"
+		href = "bootstrap.css"
 		/>
+
+	<link rel = "stylesheet"
+		type = "text/css"
+		href = "styles2.css"
+		/>
+
 	<head>
 		<title>First page</title>
 	</head>
@@ -10,8 +16,9 @@
 		<a href = "home.html">Home</a>
 		<hr></hr>
 		<h1>Contact Me</h1>
-
-	<div class = "responsive">Column 1
+<div class = "container">
+<div class = "row">
+	<div class = "col-md-6 thin_border">Column 1
 		<h3>Ordered list</h3>
 		<ol>
 			<li>house no</li>
@@ -19,7 +26,7 @@
 			<li>town</li>
 		</ol>
 	</div>
-	<div class = "responsive">Column 2
+	<div class = "col-md-6 thin_border">Column 2
 		<h3>Unordered list</h3>
 		<ul>
 			<li>house no</li>
@@ -27,5 +34,7 @@
 			<li>town</li>
 		</ul>
 	</div>
+</div>
+</div>
 	</body>
 </html>
